--- a/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
+++ b/src/MEGASync/stalled_issues/gui/ui/StalledIssueFilePath.ui
@@ -139,7 +139,7 @@
           <number>2</number>
          </property>
          <property name="rightMargin">
-          <number>0</number>
+          <number>4</number>
          </property>
          <property name="bottomMargin">
           <number>2</number>
@@ -204,6 +204,13 @@
            </property>
            <property name="text">
             <string/>
+           </property>
+           <property name="icon">
+            <iconset resource="../../../gui/Resources_common.qrc">
+             <normaloff>:/external_link_small_thin_outline</normaloff>:/external_link_small_thin_outline</iconset>
+           </property>
+           <property name="normal_off" stdset="0">
+            <string notr="true">icon-secondary</string>
            </property>
           </widget>
          </item>
@@ -516,7 +523,7 @@
           <number>3</number>
          </property>
          <property name="leftMargin">
-          <number>0</number>
+          <number>30</number>
          </property>
          <property name="topMargin">
           <number>4</number>
@@ -527,28 +534,6 @@
          <property name="bottomMargin">
           <number>4</number>
          </property>
-         <item>
-          <widget class="IconLabel" name="moveLines">
-           <property name="sizePolicy">
-            <sizepolicy hsizetype="Fixed" vsizetype="Fixed">
-             <horstretch>0</horstretch>
-             <verstretch>0</verstretch>
-            </sizepolicy>
-           </property>
-           <property name="minimumSize">
-            <size>
-             <width>16</width>
-             <height>16</height>
-            </size>
-           </property>
-           <property name="maximumSize">
-            <size>
-             <width>16</width>
-             <height>16</height>
-            </size>
-           </property>
-          </widget>
-         </item>
          <item>
           <widget class="QLabel" name="moveLabel">
            <property name="text">
@@ -603,7 +588,7 @@
           <number>2</number>
          </property>
          <property name="rightMargin">
-          <number>0</number>
+          <number>4</number>
          </property>
          <property name="bottomMargin">
           <number>2</number>
@@ -667,7 +652,14 @@
             </size>
            </property>
            <property name="text">
-            <string/>
+            <string notr="true"/>
+           </property>
+           <property name="icon">
+            <iconset resource="../../../gui/Resources_common.qrc">
+             <normaloff>:/external_link_small_thin_outline</normaloff>:/external_link_small_thin_outline</iconset>
+           </property>
+           <property name="normal_off" stdset="0">
+            <string notr="true">icon-secondary</string>
            </property>
           </widget>
          </item>
