--- a/src/MEGASync/gui/Resources_common.qrc
+++ b/src/MEGASync/gui/Resources_common.qrc
@@ -1310,5 +1310,6 @@
         <file alias="chevron-down_small_thin_outline">images/themed/tokenizable/chevron-down_small_thin_outline.svg</file>
         <file alias="chevron-up_small_thin_outline">images/themed/tokenizable/chevron-up_small_thin_outline.svg</file>
         <file alias="minus-square_small_thin_solid">images/themed/tokenizable/minus-square_small_thin_solid.svg</file>
+        <file alias="info_small_thin_outline">images/themed/tokenizable/info_small_thin_outline.svg</file>
     </qresource>
 </RCC>
