--- a/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
+++ b/src/MEGASync/node_selector/gui/ui/NodeSelector.ui
@@ -184,8 +184,8 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
            </property>
            <property name="icon" stdset="0">
             <iconset resource="../../../gui/Resources_common.qrc">
-             <normaloff>:/cloud_off</normaloff>
-             <normalon>:/cloud_on</normalon>:/cloud_off</iconset>
+             <normaloff>:/cloud_small_thin_outline</normaloff>
+             <normalon>:/cloud_small_thin_solid</normalon>:/cloud_small_thin_outline</iconset>
            </property>
            <property name="class" stdset="0">
             <string notr="true">sidebar</string>
@@ -214,8 +214,8 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
            </property>
            <property name="icon" stdset="0">
             <iconset resource="../../../gui/Resources_common.qrc">
-             <normaloff>:/folder-users_off</normaloff>
-             <normalon>:/folder-users_on</normalon>:/folder-users_off</iconset>
+             <normaloff>:/folder-users_small_thin_outline</normaloff>
+             <normalon>:/folder-users_small_thin_solid</normalon>:/folder-users_small_thin_outline</iconset>
            </property>
            <property name="class" stdset="0">
             <string notr="true">sidebar</string>
@@ -238,8 +238,8 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
            </property>
            <property name="icon" stdset="0">
             <iconset resource="../../../gui/Resources_common.qrc">
-             <normaloff>:/devices_off</normaloff>
-             <normalon>:/devices_on</normalon>:/devices_off</iconset>
+             <normaloff>:/devices_small_thin_outline</normaloff>
+             <normalon>:/devices_small_thin_solid</normalon>:/devices_small_thin_outline</iconset>
            </property>
            <property name="class" stdset="0">
             <string notr="true">sidebar</string>
@@ -262,8 +262,8 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
            </property>
            <property name="icon" stdset="0">
             <iconset resource="../../../gui/Resources_common.qrc">
-             <normaloff>:/trash_off</normaloff>
-             <normalon>:/trash_on</normalon>:/trash_off</iconset>
+             <normaloff>:/trash_small_thin_outline</normaloff>
+             <normalon>:/trash_small_thin_solid</normalon>:/trash_small_thin_outline</iconset>
            </property>
            <property name="class" stdset="0">
             <string notr="true">sidebar</string>
@@ -313,8 +313,8 @@ background-color: #F7F7F7; /*colorToken.surface-1*/
            </property>
            <property name="icon" stdset="0">
             <iconset resource="../../../gui/Resources_common.qrc">
-             <normaloff>:/search_outline_small</normaloff>
-             <normalon>:/search_solid_small</normalon>:/search_outline_small</iconset>
+             <normaloff>:/search_small_thin_outline</normaloff>
+             <normalon>:/search_small_thin_solid</normalon>:/search_small_thin_outline</iconset>
            </property>
            <property name="closeButtonVisible" stdset="0">
             <bool>true</bool>
