--- a/src/MEGASync/node_selector/gui/ui/SearchLineEdit.ui
+++ b/src/MEGASync/node_selector/gui/ui/SearchLineEdit.ui
@@ -160,7 +160,7 @@ border-radius: 16px;
         </property>
         <property name="icon">
          <iconset resource="../../../gui/Resources_common.qrc">
-          <normaloff>:/search_outline_small</normaloff>:/search_outline_small</iconset>
+          <normaloff>:/search_small_thin_outline</normaloff>:/search_small_thin_outline</iconset>
         </property>
         <property name="checkable">
          <bool>false</bool>
@@ -232,7 +232,7 @@ border-radius: 16px;
         </property>
         <property name="icon">
          <iconset resource="../../../gui/Resources_common.qrc">
-          <normaloff>:/x_circle_outline_small</normaloff>:/x_circle_outline_small</iconset>
+          <normaloff>:/x-circle_small_thin_outline</normaloff>:/x-circle_small_thin_outline</iconset>
         </property>
         <property name="class" stdset="0">
          <string notr="true">icon-button</string>
